[tool.poetry]
name = "polymind"
version = "0.0.64"  # Update this version before publishing to PyPI
description = "PolyMind is a customizable collaborative multi-agent framework for collective intelligence and distributed problem solving."
authors = ["TechTao"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9, <3.13"
numpy = "1.26.0"
qdrant-client = "1.7.0"
pydantic = "^2.6.3"
python-dotenv = "^1.0.1"
aiohttp = "^3.9.3"
colorama = "^0.4.6"
tavily-python = "^0.3.3"

# Optional dependencies
openai = "^1.37.0"
faiss-cpu = { version = "1.8.0", optional = true }
anthropic = "^0.31.2"
pymilvus = { version = "2.3.7", optional = true }
rdflib = "^7.0.0"
flake8 = "^7.1.0"
pytest-cov = "^5.0.0"
filelock = "3.15.4"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
isort = "^5.13.2"
flake8 = "^7.0.0"
aioresponses = "^0.7.6"
pytest = "^8.1.1"
pytest-asyncio = "^0.23.5.post1"
vulture = "^2.11"
flake8-pyproject = "^1.2.3"
coverage = "^7.6.0"

[tool.poetry.extras]
openai = ["openai"]
anthropic = ["anthropic"]
milvus = ["pymilvus"]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
skip = ["__init__.py", "venv", "*/venv/*", "*/__pycache__/*", "*/site-packages/*"]
known_first_party = ["polymind"]
known_third_party = ["dotenv", "pathlib", "shutil"]

[tool.flake8]
max-line-length = 120
exclude = ["__init__.py"]
ignore = ["Q000", "E203"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    "--cov=your_module_name",
    "--cov-fail-under=67"
]

